# sonic-redfish

./: .gitignore  HLD.md  Makefile  Makefile.build  README.md  build-debs-docker.sh  build-debs-quick.sh
docker/: Dockerfile.j2  critical_processes  start.sh  supervisord.conf
oem-extension/sonic/: sonic_submit_alert.hpp  sonic_submit_telemetry.hpp
patches/: 0001-Integrating-bmcweb-with-SONiC-s-build-system.patch  0002-Add-Product-field-to-Redfish-service-root.patch  0002-Skip-Authorization-when-calling-D-Bus-service-APIs-2.patch  0003-Undo-Authorization-code-and-change-pamUpdatePassword.patch  0004-Updated-pamUpdatePassword-code.patch  0005-NOS-4177-Added-Github-Workflows-4.patch  series
scripts/: setup-submodules.sh
sonic-dbus-bridge/: meson.build  meson.options
sonic-dbus-bridge/config/: config.yaml
sonic-dbus-bridge/dbus/: xyz.openbmc_project.Certs.Manager.Authority.Truststore.conf  xyz.openbmc_project.Certs.Manager.Server.Https.conf  xyz.openbmc_project.Software.BMC.Updater.conf
sonic-dbus-bridge/debian/: changelog  control  rules
sonic-dbus-bridge/include/: bridge_app.hpp  certificate.hpp  certificate_manager.hpp  config_manager.hpp  dbus_exporter.hpp  file.hpp  fru_adapter.hpp  inventory_model.hpp  logger.hpp  object_mapper.hpp  platform_json_adapter.hpp  redis_adapter.hpp  redis_state_publisher.hpp  redis_state_subscriber.hpp  software_mgr.hpp  state_manager.hpp  switch_redis_adapter.hpp  types.hpp  update_engine.hpp  user_mgr.hpp  users.hpp  version_utils.hpp  x509_utils.hpp
sonic-dbus-bridge/scripts/: debug_redis.sh  test_redfish.sh
sonic-dbus-bridge/src/: bridge_app.cpp  certificate.cpp  certificate_manager.cpp  config_manager.cpp  dbus_exporter.cpp  fru_adapter.cpp  inventory_model.cpp  main.cpp  object_mapper.cpp  platform_json_adapter.cpp  redis_adapter.cpp  redis_state_publisher.cpp  redis_state_subscriber.cpp  software_mgr.cpp  state_manager.cpp  switch_redis_adapter.cpp  update_engine.cpp  user_mgr.cpp  users.cpp  x509_utils.cpp
sonic-dbus-bridge/subprojects/: stdexec.wrap
test/: test_dbus_objects.sh
